Fix font-size and text alignment in CSS

--- a/main.css
+++ b/main.css
@@ -1,19 +1,19 @@
 body{
       background-color: #26c0ce;
 }
-.font-size{
-    font-size: '25px';
-    font-family: 'Impact', 'Haettenschweiler', 'Arial Narrow Bold', 'sans-serif';
-    text-align: 'center';
+.font-size {
+    font-size: 25px;
+    font-family: 'Impact', Haettenschweiler, 'Arial Narrow Bold', 'sans-serif';
+    text-align: center;
 }
 .Police-text {
     font-family: 'Arial', 'Helvetica', 'sans-serif';
     font-weight: 200 ;
-    text-align: 'justify';
-    line-height: 40;
+    text-align: justify;
+    line-height: 40px;
 }
 
 .BIG {
-    font-size: 70;
+    font-size: 70px;
 
 }
